Fix page layout on mobile

--- a/client/src/Themes/ZeraDark/Components/Posts/ViewPost.module.scss
+++ b/client/src/Themes/ZeraDark/Components/Posts/ViewPost.module.scss
@@ -1,28 +1,14 @@
-.imgWrapper {
-  position: relative;
+.postImage {
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   gap: 4px;
 
-  max-height: #{'min(100vh, 800px)'};
-  max-width: 100vw;
+  max-height: #{"min(100vh, 800px)"};
   width: 100%;
 
   user-select: none;
-  scroll-snap-stop: always;
-
-  img {
-    margin-left: 4px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 800px;
-    width: auto;
-    aspect-ratio: 1 / 1.4142;
-  }
 
   &.isMobile {
     flex-direction: column-reverse;
@@ -32,6 +18,25 @@
     img {
       margin-bottom: 4px;
     }
+  }
+}
+
+.imgWrapper {
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    margin-left: 4px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    object-fit: contain;
+    max-width: 100vw;
+    max-height: #{"min(100vh, 800px)"};
+    width: auto;
+    aspect-ratio: 1 / 1.4142;
   }
 }
 
